--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-final-app",
   "version": "1.0.0",
-  "main": "scripts.js",
+  "main": "./index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -25,6 +25,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
+    "react-scripts-ts": "^3.1.0",
     "reduce-reducers": "^1.0.4",
     "redux": "^4.0.4"
   },
